# reachscan

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: schema_v1.md
examples/demo-agent/: agent.py  agent2.py  autonomy_agent.py  network_agent.py  secrets_agent.py
examples/demo_agent/: autonomy_agent.py  dynamic_exec_agent.py  file_access_agent.py  secrets_agent.py
src/agent_scan/: cli.py  py_entry_points.py  reachability.py  scanner.py  schema.py  source_loader.py  ts_entry_points.py
src/agent_scan/analysis/: finding_enrichment.py
src/agent_scan/detectors/: __init__.py  autonomy.py  base.py  dynamic_exec.py  network.py  registry.py  secrets.py  shell_exec.py
src/agent_scan/reporters/: json_reporter.py  text_reporter.py
src/reachscan/: call_graph.py  cli.py  py_entry_points.py  reachability.py  scanner.py  schema.py  source_loader.py  ts_entry_points.py
src/reachscan/analysis/: __init__.py  finding_enrichment.py  impact.py
src/reachscan/detectors/: __init__.py  autonomy.py  base.py  dynamic_exec.py  file_access.py  network.py  registry.py  shell_exec.py
src/reachscan/reporters/: json_reporter.py  text_reporter.py
src/tests/: test_shell_exec.py
src/tests/fixtures/: sample1.py
tests/: test_analysis_impact.py  test_autonomy.py  test_call_graph.py  test_dynamic_exec.py  test_exit_codes.py  test_file_access.py  test_network.py  test_py_entry_points.py  test_pypi_loader.py  test_reachability.py  test_scan_target.py  test_scanner_v2_output.py  test_schema.py  test_secrets.py  test_shell_exec.py  test_source_loader.py  test_text_reporter.py  test_ts_entry_points.py
