[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reachscan"
version = "0.1.0"
description = "Reachability-based capability scanner for AI agent and MCP server codebases."
readme = "README.md"
authors = [{name = "Vinmay Nair", email = "vinmay.nair@gmail.com"}]
license = {text = "Apache-2.0"}

[project.optional-dependencies]
dev = ["pytest", "ruff", "pipx", "click"]

[project.urls]
"Homepage" = "https://github.com/vinmay/reachscan"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
reachscan = "reachscan.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
