[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reachscan"
version = "0.1.1"
description = "Reachability-based capability scanner for AI agent and MCP server codebases."
readme = "README.md"
authors = [{name = "Vinmay Nair", email = "vinmay.nair@gmail.com"}]
license = "Apache-2.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest", "ruff", "pipx", "click"]

[project.urls]
"Homepage" = "https://github.com/vinmay/reachscan"
"Website" = "https://reachscan.dev"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
reachscan = "reachscan.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
